// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`happy 1`] = `
Array [
  "/home/s/repos/services/packages/helpers-fn/src/index.js",
  "/home/s/repos/services/packages/helpers-fn/src/exported/create-benchmark.js",
  "/home/s/repos/services/packages/helpers-fn/src/exported/create-complex-benchmark.js",
  "/home/s/repos/services/packages/helpers-fn/src/exported/exec.js",
  "/home/s/repos/services/packages/helpers-fn/src/exported/parse-hjson.js",
  "/home/s/repos/services/packages/helpers-fn/src/exported/parse-hjson.spec.js",
  "/home/s/repos/services/packages/helpers-fn/src/exported/run-tests.js",
  "/home/s/repos/services/packages/helpers-fn/src/exported/run-tests.spec.js",
  "/home/s/repos/services/packages/helpers-fn/src/exported/scan-folder.js",
  "/home/s/repos/services/packages/helpers-fn/src/exported/scan-folder.spec.js",
  "/home/s/repos/services/packages/helpers-fn/src/exported/translate.js",
  "/home/s/repos/services/packages/helpers-fn/src/exported/translate.spec.js",
  "/home/s/repos/services/packages/helpers-fn/src/log/constants.js",
  "/home/s/repos/services/packages/helpers-fn/src/log/log.js",
  "/home/s/repos/services/packages/helpers-fn/src/log/log.spec.js",
  "/home/s/repos/services/packages/helpers-fn/src/tests/benchmark-utils.js",
  "/home/s/repos/services/packages/helpers-fn/src/tests/create-benchmark.js",
  "/home/s/repos/services/packages/helpers-fn/src/log/_modules/big-log.js",
  "/home/s/repos/services/packages/helpers-fn/src/log/_modules/box.js",
  "/home/s/repos/services/packages/helpers-fn/src/log/_modules/colorized-background.js",
  "/home/s/repos/services/packages/helpers-fn/src/log/_modules/colorized-text.js",
  "/home/s/repos/services/packages/helpers-fn/src/log/_modules/log-object.js",
  "/home/s/repos/services/packages/helpers-fn/src/log/_modules/log-with-icon.js",
  "/home/s/repos/services/packages/helpers-fn/src/log/_modules/separator.js",
  "/home/s/repos/services/packages/helpers-fn/src/tests/benchmarks/allPass.js",
]
`;

exports[`with exclude 1`] = `
Array [
  "/home/s/repos/services/packages/helpers-fn/src/index.js",
  "/home/s/repos/services/packages/helpers-fn/src/exported/create-benchmark.js",
  "/home/s/repos/services/packages/helpers-fn/src/exported/create-complex-benchmark.js",
  "/home/s/repos/services/packages/helpers-fn/src/exported/exec.js",
  "/home/s/repos/services/packages/helpers-fn/src/exported/parse-hjson.js",
  "/home/s/repos/services/packages/helpers-fn/src/exported/parse-hjson.spec.js",
  "/home/s/repos/services/packages/helpers-fn/src/exported/run-tests.js",
  "/home/s/repos/services/packages/helpers-fn/src/exported/run-tests.spec.js",
  "/home/s/repos/services/packages/helpers-fn/src/exported/scan-folder.js",
  "/home/s/repos/services/packages/helpers-fn/src/exported/scan-folder.spec.js",
  "/home/s/repos/services/packages/helpers-fn/src/exported/translate.js",
  "/home/s/repos/services/packages/helpers-fn/src/exported/translate.spec.js",
  "/home/s/repos/services/packages/helpers-fn/src/tests/benchmark-utils.js",
  "/home/s/repos/services/packages/helpers-fn/src/tests/create-benchmark.js",
  "/home/s/repos/services/packages/helpers-fn/src/tests/benchmarks/allPass.js",
]
`;

exports[`with filter 1`] = `
Array [
  "/home/s/repos/services/packages/helpers-fn/src/exported/parse-hjson.spec.js",
  "/home/s/repos/services/packages/helpers-fn/src/exported/run-tests.spec.js",
  "/home/s/repos/services/packages/helpers-fn/src/exported/scan-folder.spec.js",
  "/home/s/repos/services/packages/helpers-fn/src/exported/translate.spec.js",
  "/home/s/repos/services/packages/helpers-fn/src/log/log.spec.js",
]
`;
